// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack Structure TapStack instantiates successfully via props 1`] = `
"{
  "output": {
    "api-gateway-url": {
      "description": "API Gateway endpoint URL",
      "value": "https://mock-api.execute-api.us-east-1.amazonaws.com/v1"
    },
    "canary-deployment-status": {
      "description": "Canary deployment configuration",
      "value": "CodeDeployDefault.Lambda10PercentEvery5Minutes - 10% traffic for 5 minutes before 100%"
    },
    "codedeploy-application-1": {
      "description": "CodeDeploy Application 1 name",
      "value": "mock-app"
    },
    "codedeploy-application-2": {
      "description": "CodeDeploy Application 2 name",
      "value": "mock-app"
    },
    "lambda-function-1-alias-arn": {
      "description": "Lambda Function 1 Alias ARN",
      "value": "arn:aws:lambda:us-east-1:123456789012:function:mock-function:live"
    },
    "lambda-function-1-arn": {
      "description": "Lambda Function 1 ARN",
      "value": "arn:aws:lambda:us-east-1:123456789012:function:mock-function"
    },
    "lambda-function-1-name": {
      "description": "Lambda Function 1 name",
      "value": "mock-function"
    },
    "lambda-function-2-alias-arn": {
      "description": "Lambda Function 2 Alias ARN",
      "value": "arn:aws:lambda:us-east-1:123456789012:function:mock-function:live"
    },
    "lambda-function-2-arn": {
      "description": "Lambda Function 2 ARN",
      "value": "arn:aws:lambda:us-east-1:123456789012:function:mock-function"
    },
    "lambda-function-2-name": {
      "description": "Lambda Function 2 name",
      "value": "mock-function"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "CommitAuthor": "test-author",
              "Environment": "prod",
              "Repository": "test-repo"
            }
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "custom-state-bucket",
        "encrypt": true,
        "key": "prod/TestTapStackWithProps.tfstate",
        "region": "us-west-2",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;

exports[`Stack Structure TapStack uses default values when no props provided 1`] = `
"{
  "output": {
    "api-gateway-url": {
      "description": "API Gateway endpoint URL",
      "value": "https://mock-api.execute-api.us-east-1.amazonaws.com/v1"
    },
    "canary-deployment-status": {
      "description": "Canary deployment configuration",
      "value": "CodeDeployDefault.Lambda10PercentEvery5Minutes - 10% traffic for 5 minutes before 100%"
    },
    "codedeploy-application-1": {
      "description": "CodeDeploy Application 1 name",
      "value": "mock-app"
    },
    "codedeploy-application-2": {
      "description": "CodeDeploy Application 2 name",
      "value": "mock-app"
    },
    "lambda-function-1-alias-arn": {
      "description": "Lambda Function 1 Alias ARN",
      "value": "arn:aws:lambda:us-east-1:123456789012:function:mock-function:live"
    },
    "lambda-function-1-arn": {
      "description": "Lambda Function 1 ARN",
      "value": "arn:aws:lambda:us-east-1:123456789012:function:mock-function"
    },
    "lambda-function-1-name": {
      "description": "Lambda Function 1 name",
      "value": "mock-function"
    },
    "lambda-function-2-alias-arn": {
      "description": "Lambda Function 2 Alias ARN",
      "value": "arn:aws:lambda:us-east-1:123456789012:function:mock-function:live"
    },
    "lambda-function-2-arn": {
      "description": "Lambda Function 2 ARN",
      "value": "arn:aws:lambda:us-east-1:123456789012:function:mock-function"
    },
    "lambda-function-2-name": {
      "description": "Lambda Function 2 name",
      "value": "mock-function"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
        ],
        "region": "us-east-1"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestTapStackDefault.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;
